bug: fix gap at right side of page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -71,12 +71,16 @@ header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   text-wrap: nowrap;
   position: sticky;
   top: 0;
   left: 0;
   z-index: 1000;
+
+  .home-icon-container {
+    margin-right: auto;
+  }
 
   /* 
   Consider scrolling down hides nav
@@ -201,13 +205,13 @@ p {
 
   header {
     height: 60px;
-    font-size: 0.9rem;
+    font-size: 0.95rem;
     padding: 4px 16px 0px 16px;
-    gap: 2rem;
   }
 
   nav {
-    gap: 1.5rem;
+    gap: 0.7rem;
+    padding-left: 2rem;
   }
 
   p {
@@ -292,8 +296,8 @@ p {
   }
 
   .home-icon-container svg {
-    width: 96px;
-    height: 64px;
+    width: 80px;
+    height: 48px;
     color: colors.$secondary-color;
   }
 
